--- a/Makefile.am
+++ b/Makefile.am
@@ -45,13 +45,19 @@ library_library_dictionary_a_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS)\
 #         -Wstack-usage=256 # data bytes per warp
 
 # vm 
-bin_PROGRAMS = binary/programmer
+bin_PROGRAMS = binary/programmer binary/encoding
 binary_programmer_SOURCES = source/opencl_programmer.c 
 binary_programmer_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS) \
          -Wstack-usage=32768  #L1 Cache
 binary_programmer_LDADD = library/library_seed.a \
           library/library_generic.a library/library_dictionary.a
 # library/library_programmer.a library/library_random.a 
+
+binary_encoding_SOURCES = source/encoding.c
+binary_encoding_CFLAGS = -I$(top_srcdir) $(MY_CFLAGS) \
+         -Wstack-usage=32768  #L1 Cache
+binary_encoding_LDADD = library/library_seed.a \
+          library/library_generic.a library/library_dictionary.a
 
 # TESTS
 #TESTS = check_vm
